# atomicals-electrumx

./: .cirrus.yml  .env  .env.sample  .gitignore  .pre-commit-config.yaml  LICENCE  LICENSE-PYTHON-BITCOINTX  downloadData.sh  electrumx_compact_history  electrumx_rpc  electrumx_server  pyproject.toml  requirements-test.txt  requirements.txt  run.sh  setup.py  urls.txt
.github/workflows/: tests.yml
bitcointx/: __init__.py  base58.py  bech32.py  rpc.py  segwit_addr.py  signmessage.py  util.py  wallet.py
bitcointx/core/: __init__.py  _bignum.py  _ripemd160.py  atomicalsconsensus.py  ecdasig_parse_der_lax.py  key.py  psbt.py  script.py  scripteval.py  secp256k1.py  serialize.py  sha256.py
bitcointx/tests/: __init__.py  test_async_and_threading.py  test_base58.py  test_bech32.py  test_core.py  test_hd_keys.py  test_imports.py  test_key.py  test_keystore.py  test_load_secp256k1.py  test_psbt.py  test_ripemd160.py  test_rpc.py  test_script.py  test_scripteval.py  test_segwit.py  test_serialize.py  test_sha256.py  test_signmessage.py  test_transactions.py  test_wallet.py
contrib/: query.py
docs/: HOWTO.rst  changelog.rst  conf.py  environment.rst  newest.txt  prev.txt
electrumx/: version.py
electrumx/lib/: atomicals_blueprint_builder.py  avm_factory.py  coins.py  eaglesong.py  enum.py  env_base.py  hash.py  merkle.py  peer.py  psbt.py  script.py  script2addr.py  segwit_addr.py  server_base.py  text.py  tx.py  tx_axe.py  tx_dash.py  util.py  util_atomicals.py  util_atomicals_formats.py
electrumx/server/: block_processor.py  controller.py  daemon.py  db.py  env.py  history.py  http_middleware.py  http_session.py  mempool.py  peers.py  session.py  storage.py
tests/: test_blocks.py  test_transactions.py
tests/blocks/: aryacoin_mainnet_1000.json  bata_mainnet_1000.json  bitcoinplus_mainnet_749740.json  bitcoinprivate_mainnet_1000.json  bitcore_mainnet_100000.json  cannacoin_mainnet_1000.json  donu_mainnet_1000.json  europecoin_mainnet_1000.json  iop_mainnet_1000.json  linx_mainnet_1000.json  litecoincash_mainnet_1000.json  pac_mainnet_27676.json  pac_testnet_16275.json  unobtanium_mainnet_1000.json
tests/lib/: test_addresses.py  test_atomicals_blueprint_builder.py  test_atomicals_utils.py  test_atomicals_utils_get_name_request_candidate_status.py  test_atomicalsconsensus_OP_DECODEBLOCKINFO.py  test_atomicalsconsensus_OP_FT_BALANCE.py  test_atomicalsconsensus_OP_FT_BALANCE_ADD.py  test_atomicalsconsensus_OP_FT_COUNT.py  test_atomicalsconsensus_OP_FT_ITEM.py  test_atomicalsconsensus_OP_FT_WITHDRAW.py  test_atomicalsconsensus_OP_GETBLOCKINFO.py  test_atomicalsconsensus_OP_HASH_FN.py  test_atomicalsconsensus_OP_INPUTBYTECODE.py  test_atomicalsconsensus_OP_INPUTSEQUENCENUMBER.py  test_atomicalsconsensus_OP_INPUTWITNESSBYTECODE.py  test_atomicalsconsensus_OP_KV_DELETE.py  test_atomicalsconsensus_OP_KV_EXISTS.py  test_atomicalsconsensus_OP_KV_GET.py  test_atomicalsconsensus_OP_KV_PUT.py  test_atomicalsconsensus_OP_LSHIFT_OP_RSHIFT.py  test_atomicalsconsensus_OP_NFT_COUNT.py  test_avm.py  (+17 more)
(+22 files in other folders)
